Fix YAML syntax for Build and start services step in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,8 @@ enable_registration_without_verification: true
 EOF
 
     - name: Build and start services
-      run: docker compose up -d
+      run: |
+        docker compose up -d
 
     - name: Test Synapse health
       run: |
@@ -56,4 +57,5 @@ EOF
 
     - name: Stop services
       if: always()
-      run: docker compose down
+      run: |
+        docker compose down
