Fix YAML syntax issues (indentation)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,9 @@ jobs:
     - name: Generate and configure Synapse config
       run: |
         mkdir synapse_data
-        docker run --rm -v $(pwd)/synapse_data:/data -e SYNAPSE_SERVER_NAME=localhost -e SYNAPSE_REPORT_STATS=no matrixdotorg/synapse:latest generate
+        docker run --rm -v $(pwd)/synapse_data:/data \
+	-e SYNAPSE_SERVER_NAME=localhost \
+	-e SYNAPSE_REPORT_STATS=no matrixdotorg/synapse:latest generate
         cat << 'EOF' >> synapse_data/homeserver.yaml
 	database:
   	  name: psycopg2
