Fix: removed cat << EOF from yaml file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,20 +36,10 @@ jobs:
           -e SYNAPSE_SERVER_NAME=localhost \
           -e SYNAPSE_REPORT_STATS=no \
           matrixdotorg/synapse:latest generate
-        cat << 'EOF' >> synapse_data/homeserver.yaml
-        database:
-          name: psycopg2
-          args:
-            user: synapse_user
-            password: signal123
-            database: synapse
-            host: db
-            cp_min: 5
-            cp_max: 10
-        public_baseurl: http://localhost
-        enable_registration: true
-        enable_registration_without_verification: true
-        EOF
+        sed -i 's/database:\n  name: sqlite3\n  args:\n    database: \/data\/homeserver\.db/database:\n  name: psycopg2\n  args:\n    user: synapse_user\n    password: signal123\n    database: synapse\n    host: db\n    cp_min: 5\n    cp_max: 10/g' synapse_data/homeserver.yaml
+        sed -i 's/#public_baseurl: .*/public_baseurl: http:\/\/localhost/g' synapse_data/homeserver.yaml
+        sed -i 's/#enable_registration: false/enable_registration: true/g' synapse_data/homeserver.yaml
+        sed -i 's/#enable_registration_without_verification: false/enable_registration_without_verification: true/g' synapse_data/homeserver.yaml
 
     - name: Build and start services
       run: |
