Fix YAML linting and remove Synapse environment variables in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,8 @@ jobs:
 
     - name: Lint YAML files
       run: |
-        docker run --rm -v $(pwd):/data cytopia/yamllint:latest yamllint /data/docker-compose.yml
+        ls -l
+        docker run --rm -v "$(pwd)":/data cytopia/yamllint:latest yamllint /data/docker-compose.yml
 
     - name: Generate self-signed certificates
       run: |
@@ -32,22 +33,26 @@ jobs:
     - name: Generate and configure Synapse config
       run: |
         mkdir synapse_data
-        docker run --rm -v $(pwd)/synapse_data:/data \
+        docker run --rm -v "$(pwd)/synapse_data:/data" \
           -e SYNAPSE_SERVER_NAME=localhost \
           -e SYNAPSE_REPORT_STATS=no \
           matrixdotorg/synapse:latest generate
+        ls -l synapse_data
+        cat synapse_data/homeserver.yaml
         sed -i 's/database:\n  name: sqlite3\n  args:\n    database: \/data\/homeserver\.db/database:\n  name: psycopg2\n  args:\n    user: synapse_user\n    password: signal123\n    database: synapse\n    host: db\n    cp_min: 5\n    cp_max: 10/g' synapse_data/homeserver.yaml
         sed -i 's/#public_baseurl: .*/public_baseurl: http:\/\/localhost/g' synapse_data/homeserver.yaml
         sed -i 's/#enable_registration: false/enable_registration: true/g' synapse_data/homeserver.yaml
         sed -i 's/#enable_registration_without_verification: false/enable_registration_without_verification: true/g' synapse_data/homeserver.yaml
+        cat synapse_data/homeserver.yaml
 
     - name: Build and start services
       run: |
         docker compose up -d
+        docker compose ps -a
 
     - name: Test Synapse health
       run: |
-        sleep 60
+        sleep 90
         curl --fail http://localhost:8008/_matrix/client/versions
         curl --fail http://localhost/_matrix/client/versions
 
