Shorten synapse healthcheck and disable yamllint line-length in CI

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+---
 services:
   db:
     image: postgres:13
@@ -26,7 +27,7 @@ services:
     volumes:
       - ./synapse_data:/data
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8008/_matrix/client/versions || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8008/_matrix/v || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
