--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Lint YAML files
       run: |
         ls -l
-        docker run --rm -v "$(pwd)":/data cytopia/yamllint:latest /data/docker-compose.yml
+        docker run --rm -v "$(pwd)":/data cytopia/yamllint:latest --config-data "{extends: default, rules: {line-length: disable}}" /data/docker-compose.yml
 
     - name: Generate self-signed certificates
       run: |
