--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,17 +35,16 @@ jobs:
       run: |
         mkdir synapse_data
         chmod -R 777 synapse_data
-        docker run --rm -v "$(pwd)/synapse_data:/data" \
+        docker run --rm -v "$(pwd)/synapse_data:/data" --user "$(id -u):$(id -g)" \
           -e SYNAPSE_SERVER_NAME=localhost \
           -e SYNAPSE_REPORT_STATS=no \
           matrixdotorg/synapse:latest generate
         ls -l synapse_data
-        chmod 666 synapse_data/homeserver.yaml
         cat synapse_data/homeserver.yaml
         sed -i 's/database:\n  name: sqlite3\n  args:\n    database: \/data\/homeserver\.db/database:\n  name: psycopg2\n  args:\n    user: synapse_user\n    password: signal123\n    database: synapse\n    host: db\n    cp_min: 5\n    cp_max: 10/g' synapse_data/homeserver.yaml
         sed -i 's/#public_baseurl: .*/public_baseurl: http:\/\/localhost/g' synapse_data/homeserver.yaml
         sed -i 's/#enable_registration: false/enable_registration: true/g' synapse_data/homeserver.yaml
-        sed -i '在天下的地方，sed -i 's/#enable_registration_without_verification: false/enable_registration_without_verification: true/g' synapse_data/homeserver.yaml
+        sed -i 's/#enable_registration_without_verification: false/enable_registration_without_verification: true/g' synapse_data/homeserver.yaml
         cat synapse_data/homeserver.yaml
 
     - name: Build and start services
