--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,9 @@ services:
       retries: 5
 
   synapse:
-    image: matrixdotorg/synapse:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: synapse_server
     depends_on:
       db:
@@ -26,6 +28,8 @@ services:
       - "8008:8008"
     volumes:
       - ./synapse_data:/data
+    command: >
+      sh -c "while ! nc -z db 5432; do sleep 1; done; python -m synapse.app.homeserver --config-path /data/homeserver.yaml"
     healthcheck:
       test: ["CMD-SHELL", "curl -f http://localhost:8008/_matrix/v || exit 1"]
       interval: 30s
