Fix synapse command with explicit entrypoint

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,10 +28,11 @@ services:
       - "8008:8008"
     volumes:
       - ./synapse_data:/data
+    entrypoint: ["/bin/sh", "-c"]
     command: >
-      sh -c "while ! nc -z db 5432; do sleep 1; done; python -m synapse.app.homeserver --config-path /data/homeserver.yaml"
+      cat /data/homeserver.yaml && while ! nc -z db 5432; do sleep 1; done && python -m synapse.app.homeserver --config-path /data/homeserver.yaml
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8008/_matrix/v || exit 1"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8008/_matrix/client/versions || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 5
