--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
----
 services:
   db:
     image: postgres:13
@@ -17,9 +16,7 @@ services:
       retries: 5
 
   synapse:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: matrixdotorg/synapse:latest
     container_name: synapse_server
     depends_on:
       db:
@@ -28,23 +25,21 @@ services:
       - "8008:8008"
     volumes:
       - ./synapse_data:/data
-      - ./wait_for_db.py:/wait_for_db.py
-    entrypoint: ["/bin/sh", "-c"]
-    command: >
-      cat /data/homeserver.yaml && python /wait_for_db.py && python -m synapse.app.homeserver --config-path /data/homeserver.yaml
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8008/_matrix/client/versions || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 5
-      start_period: 40s
+    environment:
+      SYNAPSE_SERVER_NAME: localhost
+      SYNAPSE_REPORT_STATS: "no"
+      SYNAPSE_CONFIG_PATH: /data/homeserver.yaml
+      POSTGRES_HOST: db
+      POSTGRES_DB: synapse
+      POSTGRES_USER: synapse_user
+      POSTGRES_PASSWORD: signal123
+    command: run  # Runs the server; generation happens automatically on first start if no config exists
 
   nginx:
     image: nginx:latest
     container_name: synapse_nginx
     depends_on:
-      synapse:
-        condition: service_healthy
+      - synapse
     ports:
       - "80:80"
       - "443:443"
