--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,9 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Lint YAML
-      uses: instrumenta/action-yamllint@v1
-      with:
-        yamllint_config_file: .yamllint.yml
+    - name: Lint YAML files
+      run: |
+        docker run --rm -v ${{ github.workspace }}:/data cytopia/yamllint:latest yamllint /data/docker-compose.yml
         
     - name: Generate self-signed certificates
       run: |
