--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,10 +17,11 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Lint YAML files
-      run: |
-        docker run --rm -v ${{ github.workspace }}:/data cytopia/yamllint:latest yamllint /data/docker-compose.yml
-        
+    - name: Lint YAML
+      uses: ibiqlik/action-yamllint@v1
+      with:
+        yamllint_config_file: .yamllint.yml
+    
     - name: Generate self-signed certificates
       run: |
         mkdir certs
