--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,47 +1,56 @@
+---
 name: CI for Synapse Local Setup
 
 on:
   push:
-    branches: [ main, troubleshoot ]
+    branches: [main, troubleshoot]
   pull_request:
-    branches: [ main, troubleshoot ]
+    branches: [main, troubleshoot]
 
 jobs:
   lint-and-test:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    - name: Lint YAML
-      uses: ibiqlik/action-yamllint@v1
-      with:
-        yamllint_config_file: .yamllint.yml
-    
-    - name: Generate self-signed certificates
-      run: |
-        mkdir certs
-        openssl req -x509 -nodes -days 365 -newkey rsa:2048 -out certs/selfsigned.crt -keyout certs/selfsigned.key -subj "/CN=localhost"
+      - name: Lint YAML
+        uses: ibiqlik/action-yamllint@v1
+        with:
+          config_file: .yamllint.yml
+          format: colored
+          strict: false
 
-    - name: Generate and configure Synapse config
-      run: |
-        mkdir synapse_data
-        docker run --rm -v $(pwd)/synapse_data:/data -e SYNAPSE_SERVER_NAME=localhost -e SYNAPSE_REPORT_STATS=no matrixdotorg/synapse:latest generate
-        cat << EOF >> synapse_data/homeserver.yaml
-        database:
-          name: psycopg2
-          args:
-            user: synapse_user
-            password: signal123
-            database: synapse
-            host: db
-            cp_min: 5
-            cp_max: 10
-        public_baseurl: http://localhost
-        enable_registration: true
-        enable_registration_without_verification: true
-        EOF
+      - name: Generate self-signed certificates
+        run: |
+          mkdir certs
+          openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
+            -out certs/selfsigned.crt \
+            -keyout certs/selfsigned.key \
+            -subj "/CN=localhost"
+
+      - name: Generate and configure Synapse config
+        run: |
+          mkdir synapse_data
+          docker run --rm -v $(pwd)/synapse_data:/data \
+            -e SYNAPSE_SERVER_NAME=localhost \
+            -e SYNAPSE_REPORT_STATS=no \
+            matrixdotorg/synapse:latest generate
+          cat << EOF >> synapse_data/homeserver.yaml
+database:
+  name: psycopg2
+  args:
+    user: synapse_user
+    password: signal123
+    database: synapse
+    host: db
+    cp_min: 5
+    cp_max: 10
+public_baseurl: http://localhost
+enable_registration: true
+enable_registration_without_verification: true
+EOF
