--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Generate self-signed certificates
         run: |
-          mkdir certs
+          mkdir -p certs
           openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
             -out certs/selfsigned.crt \
             -keyout certs/selfsigned.key \
