Fix: Resolve syntax errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,4 +52,4 @@ jobs:
             public_baseurl: http://localhost
             enable_registration: true
             enable_registration_without_verification: true
-            EOF
+            EOF"
