Add Ansible automation for Matrix Synapse setup; remove old static configs

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 synapse_data/homeserver.yaml
 synapse_data/*.signing.key
 synapse_data/*.log.config
+docker-compose.yml
+nginx.conf
+certs/
+synapse_data/
